consistency/_fixtures/service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        name: web
    name: web
spec:
    ports:
        - name: http
          port: 5000
          protocol: TCP
          targetPort: http
    selector:
        name: web
    sessionAffinity: None
    type: ClusterIP
